--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -154,7 +154,7 @@
                     </StackPanel>
                 </telerikPrimitives:RadCustomHubTile.FrontContent>
             </telerikPrimitives:RadCustomHubTile>
-            <telerikPrimitives:RadCustomHubTile x:Name="CloseButton" Grid.Row="4" HorizontalAlignment="Center" Margin="0,0,0,20" Height="100" VerticalAlignment="Top" Width="200" Background="#96c8dd">
+            <telerikPrimitives:RadCustomHubTile x:Name="CloseButton" Grid.Row="4" HorizontalAlignment="Center" Margin="0,0,0,20" Height="100" VerticalAlignment="Top" Width="200" Background="#96c8dd" Tapped="CloseButton_Tapped">
                 <telerikPrimitives:RadCustomHubTile.FrontContent>
                     <StackPanel Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Stretch">
                         <Grid>
@@ -166,7 +166,7 @@
                     </StackPanel>
                 </telerikPrimitives:RadCustomHubTile.FrontContent>
             </telerikPrimitives:RadCustomHubTile>
-            <telerikPrimitives:RadCustomHubTile x:Name="DeleteButton" Grid.Row="5" HorizontalAlignment="Center" Margin="0,0,0,20" Height="100" VerticalAlignment="Top" Width="200" Background="#96c8dd">
+            <telerikPrimitives:RadCustomHubTile x:Name="DeleteButton" Grid.Row="5" HorizontalAlignment="Center" Margin="0,0,0,20" Height="100" VerticalAlignment="Top" Width="200" Background="#96c8dd" Tapped="DeleteButton_Tapped">
                 <telerikPrimitives:RadCustomHubTile.FrontContent>
                     <StackPanel Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Stretch">
                         <Grid>
@@ -276,10 +276,10 @@
                     <TextBlock Grid.Column="8" Text="Billable" FontSize="16" VerticalAlignment="Bottom" />
                     <TextBlock Grid.Column="10" Text="Task Type " FontSize="16" VerticalAlignment="Bottom" />
                     <Border Grid.Row="1" BorderThickness="2" BorderBrush="#e1e1e1" CornerRadius="5" Height="32" VerticalAlignment="Top" Margin="0,4,0,0">
-                        <telerikInput:RadTimePicker x:Name="StartTimePicker" BorderThickness="0" Width="130" HorizontalAlignment="Left" Margin="0,0,0,2" VerticalAlignment="Top" />
+                        <telerikInput:RadTimePicker x:Name="StartTimePicker" BorderThickness="0" Width="130" HorizontalAlignment="Left" Margin="0,0,0,2" VerticalAlignment="Top" ValueChanged="StartTimePicker_ValueChanged" />
                     </Border>
                     <Border Grid.Row="1" Grid.Column="2" BorderThickness="2" BorderBrush="#e1e1e1" CornerRadius="5" Height="32" VerticalAlignment="Top" Margin="0,4,0,0">
-                        <telerikInput:RadTimePicker BorderThickness="0" x:Name="EndTimePicker" Grid.Row="1" Grid.Column="2" Width="130" HorizontalAlignment="Left" Margin="0,0,0,2" VerticalAlignment="Top" />
+                        <telerikInput:RadTimePicker BorderThickness="0" x:Name="EndTimePicker" Grid.Row="1" Grid.Column="2" Width="130" HorizontalAlignment="Left" Margin="0,0,0,2" VerticalAlignment="Top" ValueChanged="EndTimePicker_ValueChanged" />
                     </Border>
                     <TextBox x:Name="HoursTextBox" Margin="0,4,0,0" Height="20" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Left" Grid.Row="1" TextWrapping="Wrap" Grid.Column="4" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Width="130" />
                     <TextBlock x:Name="ErrorHours" Grid.Column="4" HorizontalAlignment="Left" Margin="0 0 0 0" Grid.Row="1" Height="50" VerticalAlignment="Top"/>
@@ -306,7 +306,7 @@
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <Image x:Name="attachButton" Source="Assets/Images/attach-button.png" Tapped="attachButton_Tapped"  />
-                    <Grid x:Name="ReplyGrid" Grid.Column="1" Width="150" Height="60" Background="#FF92C74F" VerticalAlignment="Top" Margin="20,0,0,0" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited">
+                    <Grid x:Name="ReplyGrid" Grid.Column="1" Width="150" Height="60" Background="#FF92C74F" VerticalAlignment="Top" Margin="20,0,0,0" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="ReplyGrid_Tapped">
                         <TextBlock Text="Reply" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
                     </Grid>
                 </Grid>
