--- a/SherpaDesk/AddResponse.xaml
+++ b/SherpaDesk/AddResponse.xaml
@@ -1,10 +1,8 @@
 ﻿<common:LayoutAwarePage
-    x:Name="pageRoot"
     x:Class="SherpaDesk.AddResponse"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SherpaDesk"
     xmlns:common="using:SherpaDesk.Common"
     xmlns:Controls="using:WinRTXamlToolkit.Controls"
     xmlns:telerikInput="using:Telerik.UI.Xaml.Controls.Input"
@@ -12,17 +10,6 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" Loaded="pageRoot_Loaded">
 
-    <Page.Resources>
-
-        <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
-        <x:String x:Key="AppName">My Application</x:String>
-    </Page.Resources>
-
-    <!--
-        This grid acts as a root panel for the page that defines two rows:
-        * Row 0 contains the back button and page title
-        * Row 1 contains the rest of the page layout
-    -->
     <Grid Style="{StaticResource LayoutRootStyle}" Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="240"/>
@@ -34,7 +21,7 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <TextBlock x:Name="pageTitle" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,30" Style="{StaticResource PageHeaderTextStyle}" Text="Response" FontWeight="Normal"/>
+            <TextBlock x:Name="pageTitle" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,30" Style="{StaticResource PageHeaderTextStyle}" Text="Response" />
         </Grid>
         <Grid Style="{StaticResource LayoutRootStyle}" RequestedTheme="Dark" Grid.Row="1" Background="Transparent">
             <Grid.RowDefinitions>
@@ -72,11 +59,11 @@
                 <ColumnDefinition Width="20"/>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Text="Start Time" FontSize="30" VerticalAlignment="Bottom" />
-            <TextBlock Grid.Column="2" Text="Stop Time" FontSize="30" VerticalAlignment="Bottom" />
-            <TextBlock Grid.Column="4" Text="Hours" FontSize="30" VerticalAlignment="Bottom" />
-            <TextBlock Grid.Column="6" Text="% Complete" FontSize="30" VerticalAlignment="Bottom" />
-            <TextBlock Grid.Column="8" Text="Billable" FontSize="30" VerticalAlignment="Bottom" />
-            <TextBlock Grid.Column="10" Text="Task Type " FontSize="30" VerticalAlignment="Bottom" />
+            <TextBlock Grid.Row="0" Grid.Column="2" Text="Stop Time" FontSize="30" VerticalAlignment="Bottom" />
+            <TextBlock Grid.Row="0" Grid.Column="4" Text="Hours" FontSize="30" VerticalAlignment="Bottom" />
+            <TextBlock Grid.Row="0" Grid.Column="6" Text="% Complete" FontSize="30" VerticalAlignment="Bottom" />
+            <TextBlock Grid.Row="0" Grid.Column="8" Text="Billable" FontSize="30" VerticalAlignment="Bottom" />
+            <TextBlock Grid.Row="0" Grid.Column="10" Text="Task Type " FontSize="30" VerticalAlignment="Bottom" />
             <Grid Grid.Column="0" Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto" />
@@ -96,8 +83,8 @@
                 <telerikInput:RadTimePicker x:Name="EndTimePicker" Grid.Column="2" Height="50" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="EndTimePicker_ValueChanged" />
             </Grid>
             <TextBox x:Name="HoursTextBox" Margin="0,0,0,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Left" Height="50" Grid.Row="1" TextWrapping="Wrap" Grid.Column="4" VerticalAlignment="Top" FontSize="30" Width="130" />
-            <TextBlock x:Name="ErrorHours" Grid.Column="4" HorizontalAlignment="Left" Margin="0 0 0 0" Grid.Row="1" Height="50" VerticalAlignment="Top"/>
-            <ComboBox Name="CompleteList" Grid.Column="6" Grid.Row="1" FontSize="24" HorizontalAlignment="Stretch" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+            <TextBlock Grid.Column="4" HorizontalAlignment="Left" Margin="0 0 0 0" Grid.Row="1" Height="50" VerticalAlignment="Top"/>
+            <ComboBox Grid.Column="6" Grid.Row="1" FontSize="24" HorizontalAlignment="Stretch" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
                 <ComboBoxItem Tag="0" />
                 <ComboBoxItem Content="5%" Tag="5" />
                 <ComboBoxItem Content="25%" Tag="25" />
@@ -112,12 +99,15 @@
             </ComboBox>
             <ComboBox Name="TaskTypeList" Grid.Column="10" Grid.Row="1" FontSize="24" HorizontalAlignment="Left" Width="200" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
             </ComboBox>
-            <Controls:WatermarkTextBox Name="CommentsTextbox" WatermarkText="Comments" FontSize="25" TextWrapping="Wrap" Grid.Row="3" Grid.ColumnSpan="11" Height="200" ScrollViewer.VerticalScrollMode="Auto" HorizontalAlignment="Stretch" AcceptsReturn="True" />
+            <Controls:WatermarkTextBox Name="CommentsTextbox" WatermarkText="Comments" FontSize="25" TextWrapping="Wrap" Grid.Row="3" Grid.ColumnSpan="11"
+                                       Grid.Column="0" Height="200" ScrollViewer.VerticalScrollMode="Auto" HorizontalAlignment="Stretch" AcceptsReturn="True" />
 
-            <Button x:Name="filepickButton" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Content="Attach Files" Height="50" Margin="0,0,0,0" Grid.Row="5" Padding="0,0,0,3" FontSize="24" Tapped="filepickButton_Tapped" />
+            <Button x:Name="filepickButton" Grid.ColumnSpan="3" Grid.Column="0" HorizontalAlignment="Stretch" Content="Attach Files" Height="50" Margin="0,0,0,0" Grid.Row="5" Padding="0,0,0,3" FontSize="24" Tapped="filepickButton_Tapped" />
 
-            <Button x:Name="SaveButton" Content="Add Response" Grid.Row="7" FontSize="30" Grid.ColumnSpan="3" Background="#FF2F9129" Padding="15,0,15,3" Tapped="SaveButton_Tapped" />
-            <Button x:Name="SaveAndReopenButton" Content="Save &amp; ReOpen ticket" Grid.Row="7" FontSize="30" Grid.ColumnSpan="4" Background="#FF2F9129" Tapped="SaveAndReopenButton_Click" Visibility="Collapsed" />
+            <Button x:Name="SaveButton" Content="Add Response" Grid.Row="7" FontSize="30" Grid.ColumnSpan="3"
+                    Grid.Column="0" Background="#FF2F9129" Padding="15,0,15,3" Tapped="SaveButton_Tapped" />
+            <Button x:Name="SaveAndReopenButton" Content="Save &amp; ReOpen ticket" Grid.Row="7" FontSize="30" Grid.ColumnSpan="4"
+                    Grid.Column="0" Background="#FF2F9129" Tapped="SaveAndReopenButton_Click" Visibility="Collapsed" />
             <CheckBox Name="HoldBox" Content="Place on Hold" FontSize="30" Padding="5,-8,0,0" Margin="0,3,0,0" Grid.Row="5" HorizontalAlignment="Right" Grid.ColumnSpan="3" Grid.Column="4" />
             <Button Name="SaveDoNotReopenLink" Content="Save but Do Not ReOpen" FontSize="30" Grid.Row="7" Grid.ColumnSpan="4" Grid.Column="0" Tapped="SaveDoNotReopenLink_Click" Margin="0,65,-3,-65" Visibility="Collapsed" />
             <CheckBox Name="WaitingBox" Content="Waiting On Response" HorizontalAlignment="Right" Padding="5,-8,0,0" FontSize="30" Grid.Row="5" Grid.ColumnSpan="4" Grid.Column="7" Margin="30,3,0,0" />
