--- a/SherpaDesk/AddTicket.xaml
+++ b/SherpaDesk/AddTicket.xaml
@@ -1,11 +1,14 @@
-﻿<common:LayoutAwarePage xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:SherpaDesk" xmlns:common="using:SherpaDesk.Common" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:Controls="using:WinRTXamlToolkit.Controls"
-    x:Name="pageRoot"
+﻿<common:LayoutAwarePage xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                        xmlns:common="using:SherpaDesk.Common" 
+                        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+                        xmlns:Controls="using:WinRTXamlToolkit.Controls"
     x:Class="SherpaDesk.AddTicket"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Mode=Self}}"
     mc:Ignorable="d" Loaded="pageRoot_Loaded" RequestedTheme="Light">
 
     <common:LayoutAwarePage.Resources>
-        <x:String x:Key="AppName">My Application</x:String>
         <Style x:Key="SubmitButtonStyle" TargetType="Button">
             <Setter Property="Template">
                 <Setter.Value>
@@ -41,9 +44,9 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock x:Name="pageTitle" Grid.Column="0" Foreground="#86abb6" Margin="0,30,80,20" FontSize="60" Text="Create Ticket" FontWeight="Normal"/>
-                    <HyperlinkButton x:Name="AddUserLink" VerticalAlignment="Top" Foreground="#86abb6" Margin="0,5,45,20" FontSize="35" Content="Add New User" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" FontWeight="Normal" Tapped="AddUserLink_Tapped" />
-                    <Image x:Name="AddUserArrow" Source="Assets/arrow-right.png" Stretch="None" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,0,0" Tapped="AddUserLink_Tapped" PointerEntered="AddUserArrow_PointerEntered" PointerExited="AddUserArrow_PointerExited" />
+                    <TextBlock Grid.Column="0" Foreground="#86abb6" Margin="0,30,80,20" FontSize="60" Text="Create Ticket" FontWeight="Normal"/>
+                    <HyperlinkButton VerticalAlignment="Top" Foreground="#86abb6" Margin="0,5,45,20" FontSize="35" Content="Add New User" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" FontWeight="Normal" Tapped="AddUserLink_Tapped" />
+                    <Image Source="Assets/arrow-right.png" Stretch="None" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,0,0" Tapped="AddUserLink_Tapped" PointerEntered="AddUserArrow_PointerEntered" PointerExited="AddUserArrow_PointerExited" />
                 </Grid>
                 <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="Transparent">
                     <Grid.RowDefinitions>
@@ -74,12 +77,12 @@
                             <Controls:WatermarkTextBox x:Name="DescritionTextbox" AcceptsReturn="True" HorizontalAlignment="Center" ScrollViewer.VerticalScrollMode="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="0,0,0,0" WatermarkText="Details..." TextWrapping="Wrap" Height="207" FontSize="18" Width="450" />
                         </Grid>
                     </Border>
-                    <Button x:Name="SaveButton" Width="300" Height="40" Style="{StaticResource SubmitButtonStyle}" Content="Create Ticket" HorizontalAlignment="Stretch" Grid.Column="3" VerticalAlignment="Stretch" Grid.Row="8" Foreground="White" Tapped="SaveButton_Tapped" PointerEntered="SaveButton_PointerEntered" PointerExited="SaveButton_PointerExited" FontWeight="Normal" />
+                    <Button Width="300" Height="40" Style="{StaticResource SubmitButtonStyle}" Content="Create Ticket" HorizontalAlignment="Stretch" Grid.Column="3" VerticalAlignment="Stretch" Grid.Row="8" Foreground="White" Tapped="SaveButton_Tapped" PointerEntered="SaveButton_PointerEntered" PointerExited="SaveButton_PointerExited" FontWeight="Normal" />
 
                     <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="0" TextWrapping="Wrap" Text="End User" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
                     <ComboBox x:Name="EndUserList" Grid.Column="1" Grid.Row="0" FontSize="18" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,0,0,0" VerticalAlignment="Top" SelectionChanged="EndUserList_SelectionChanged" BorderBrush="#e1e1e1">
                     </ComboBox>
-                    <HyperlinkButton x:Name="EndUserMeLink" Foreground="#625e55" Content="Me" Grid.Row="0" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="EndUserMeLink_Click"/>
+                    <HyperlinkButton Foreground="#625e55" Content="Me" Grid.Row="0" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="EndUserMeLink_Click"/>
 
                     <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="1" TextWrapping="Wrap" Text="Account" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
                     <ComboBox x:Name="AccountList" Grid.Column="1" Grid.Row="1" FontSize="18" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,15,0,15" VerticalAlignment="Top" BorderBrush="#FFCDCDCD">
@@ -92,19 +95,19 @@
                     <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="3" TextWrapping="Wrap" Text="Technician" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
                     <ComboBox x:Name="TechnicianList" Grid.Column="1" Grid.Row="3" FontSize="18" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,15,0,15" VerticalAlignment="Top" BorderBrush="#FFCDCDCD">
                     </ComboBox>
-                    <HyperlinkButton x:Name="TechnicianMeLink" Foreground="#625e55" Content="Me" Grid.Row="3" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="TechnicianMeLink_Click"/>
+                    <HyperlinkButton Foreground="#625e55" Content="Me" Grid.Row="3" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="TechnicianMeLink_Click"/>
 
                     <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="4" TextWrapping="Wrap" Text="Alternate Tech" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
                     <ComboBox x:Name="AlternateTechnicianList" Grid.Column="1" Grid.Row="4" FontSize="18" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,0,0,0" VerticalAlignment="Top" SelectionChanged="AlternateTechnicianList_SelectionChanged" BorderBrush="#FFCDCDCD">
                     </ComboBox>
-                    <HyperlinkButton x:Name="AlternateTechMeLink" Foreground="#625e55" Content="Me" Grid.Row="4" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,80,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="AlternateTechMeLink_Click"/>
+                    <HyperlinkButton Foreground="#625e55" Content="Me" Grid.Row="4" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,80,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="AlternateTechMeLink_Click"/>
 
-                    <ScrollViewer HorizontalAlignment="Left" Grid.Column="1" Grid.ColumnSpan="3" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="5" Grid.RowSpan="2" Height="100" VerticalAlignment="Top" Width="auto">
-                        <ListView x:Name="SelectedAlternateTechnicianList" Grid.Column="3" Margin="0,0,0,0" Grid.Row="5" Grid.RowSpan="3" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="450" SelectionMode="None">
+                    <ScrollViewer HorizontalAlignment="Left" Grid.Column="1" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Grid.Row="5" Grid.RowSpan="2" Height="100" VerticalAlignment="Top" Width="auto">
+                        <ListView x:Name="SelectedAlternateTechnicianList" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="450" SelectionMode="None">
                         </ListView>
                     </ScrollViewer>
 
-                    <Button x:Name="filepickButton" Foreground="#625e55" Content="File Upload" Height="40" Grid.Column="3" HorizontalAlignment="Stretch" Padding="0,0,10,0" Margin="0,20" Grid.Row="6" VerticalAlignment="Top" FontSize="18" Click="filepickButton_Click" Background="{x:Null}" FontWeight="Normal" BorderBrush="#FF777777" BorderThickness="2" HorizontalContentAlignment="Right">
+                    <Button Foreground="#625e55" Content="File Upload" Height="40" Grid.Column="3" HorizontalAlignment="Stretch" Padding="0,0,10,0" Margin="0,20" Grid.Row="6" VerticalAlignment="Top" FontSize="18" Click="filepickButton_Click" Background="{x:Null}" FontWeight="Normal" BorderBrush="#FF777777" BorderThickness="2" HorizontalContentAlignment="Right">
                         <Button.Style>
                             <Style TargetType="Button">
                                 <Setter Property="Template">
@@ -124,6 +127,12 @@
             </Grid>
         </Grid >
         <Grid x:Name="NewUserGrid" Width="600" Grid.Column="1" Visibility="Collapsed">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
@@ -131,14 +140,14 @@
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <TextBlock Foreground="#86abb6" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,50,30" FontSize="40" Text="New User" FontWeight="Normal"/>
-            <Button x:Name="CreateUserButton" Width="280" Height="40" Style="{StaticResource SubmitButtonStyle}" Content="Submit" HorizontalAlignment="Center" Grid.Column="3" Grid.Row="2" Foreground="White" FontWeight="Normal" PointerEntered="CreateUserButton_PointerEntered" PointerExited="CreateUserButton_PointerExited" Tapped="CreateUserButton_Tapped" />
+            <Button Width="280" Height="40" Style="{StaticResource SubmitButtonStyle}" Content="Submit" HorizontalAlignment="Center" Grid.Column="3" Grid.Row="2" Foreground="White" FontWeight="Normal" PointerEntered="CreateUserButton_PointerEntered" PointerExited="CreateUserButton_PointerExited" Tapped="CreateUserButton_Tapped" />
             <TextBlock Text="or" Grid.Column="3" Grid.Row="3" HorizontalAlignment="Center" FontSize="24" Margin="0,10,90,0" VerticalAlignment="Center" Foreground="#85778f" />
-            <TextBlock x:Name="CancelButton" Grid.Column="3" HorizontalAlignment="Center" Grid.Row="3" FontSize="24" Margin="20,10,0,0" VerticalAlignment="Center" Foreground="#85778f" Tapped="CancelButton_Tapped" PointerEntered="CancelButton_PointerEntered" PointerExited="CancelButton_PointerExited">
+            <TextBlock Grid.Column="3" HorizontalAlignment="Center" Grid.Row="3" FontSize="24" Margin="20,10,0,0" VerticalAlignment="Center" Foreground="#85778f" Tapped="CancelButton_Tapped" PointerEntered="CancelButton_PointerEntered" PointerExited="CancelButton_PointerExited">
                 <Underline>
                    Cancel
                 </Underline>
             </TextBlock>
-            <Grid Grid.Row="1" Margin="20,0,50,0">
+            <Grid Grid.Row="1" Grid.Column="0" Margin="20,0,50,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
