--- a/SherpaDesk/AddTime.xaml
+++ b/SherpaDesk/AddTime.xaml
@@ -4,25 +4,12 @@
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SherpaDesk"
     xmlns:common="using:SherpaDesk.Common"
-    xmlns:Controls="using:WinRTXamlToolkit.Controls"
     xmlns:telerikInput="using:Telerik.UI.Xaml.Controls.Input"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" Loaded="pageRoot_Loaded">
 
-    <Page.Resources>
-
-        <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
-        <x:String x:Key="AppName">My Application</x:String>
-    </Page.Resources>
-
-    <!--
-        This grid acts as a root panel for the page that defines two rows:
-        * Row 0 contains the back button and page title
-        * Row 1 contains the rest of the page layout
-    -->
     <Grid Style="{StaticResource LayoutRootStyle}" Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="240"/>
@@ -34,7 +21,7 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <TextBlock x:Name="pageTitle" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,30" Style="{StaticResource PageHeaderTextStyle}" Text="Add Time" FontWeight="Normal"/>
+            <TextBlock x:Name="pageTitle" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,30" Style="{StaticResource PageHeaderTextStyle}" Text="Add Time" />
         </Grid>
         <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="Transparent" Margin="0,1,0,0">
             <Grid.RowDefinitions>
@@ -58,7 +45,7 @@
 
             <TextBlock HorizontalAlignment="left" Grid.Row="0" Margin="10,0,0,0" TextWrapping="Wrap" Text="Log My Time" VerticalAlignment="Top" FontSize="40"/>
 
-            <Grid Grid.Column="1" Grid.ColumnSpan="4">
+            <Grid Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="10" />
