--- a/SherpaDesk/Styles/TimesheetResources.xaml
+++ b/SherpaDesk/Styles/TimesheetResources.xaml
@@ -1,11 +1,11 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:telerikCalendar ="using:Telerik.UI.Xaml.Controls.Input.Calendar"
-    xmlns:model="using:SherpaDesk.Models"
-    xmlns:local="using:SherpaDesk.Common" x:Name="TimesheetResources">
+    xmlns:converters="using:SherpaDesk.Converters"
+    xmlns:styles="using:SherpaDesk.Styles"
+    x:Name="TimesheetResources">
 
-    <local:CellModelToTimeLogConverter x:Key="timeLogConverter" />
+    <converters:CellModelToTimeLogConverter x:Key="timeLogConverter" />
 
     <DataTemplate x:Key="template">
         <Grid>
@@ -19,7 +19,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Grid>
-                        <Image Source="Assets/Images/button.png" Stretch="Fill" />
+                        <Image Source="../../Assets/Images/button.png" Stretch="Fill" />
                         <TextBlock Text="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center"
                                  FontFamily="Segoe UI" FontSize="24"/>
                     </Grid>                  
@@ -28,5 +28,5 @@
         </Setter>
     </Style>
 
-    <local:CustomStyleSelector x:Key="selector" EventTemplate="{StaticResource template}" />
+    <styles:CustomStyleSelector x:Key="selector" EventTemplate="{StaticResource template}" />
 </ResourceDictionary>
