Messages, Close / Delete ticket new confirm message

--- a/SherpaDesk/Info.xaml
+++ b/SherpaDesk/Info.xaml
@@ -155,7 +155,7 @@
                     </StackPanel>
                 </telerik:RadCustomHubTile.FrontContent>
             </telerik:RadCustomHubTile>
-            <telerik:RadCustomHubTile x:Name="MessagesButton" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" Height="150" Margin="0,25,5,5" VerticalAlignment="Top" Width="150" Background="#D8E9EDEF">
+            <telerik:RadCustomHubTile x:Name="MessagesButton" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" Height="150" Margin="0,25,5,5" VerticalAlignment="Top" Width="150" Background="#D8E9EDEF" Tapped="MessagesButton_Tapped">
                 <telerik:RadCustomHubTile.FrontContent>
                     <StackPanel Margin="0,0,0,0" VerticalAlignment="Bottom" HorizontalAlignment="Right">
                         <TextBlock Text="Messages" FontSize="28" Margin="0,0,10,0" Foreground="#FF7395A4" FontWeight="Bold"/>
