--- a/SherpaDesk/WorkList.xaml
+++ b/SherpaDesk/WorkList.xaml
@@ -1,6 +1,7 @@
 ﻿<common:LayoutAwarePage
     x:Name="pageRoot"
     x:Class="SherpaDesk.WorkList"
+    Loaded="pageRoot_Loaded" 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SherpaDesk"
@@ -14,11 +15,10 @@
     xmlns:primitivesCommon="using:Telerik.UI.Xaml.Controls.Primitives.Common"
     xmlns:telerikPrimitives="using:Telerik.UI.Xaml.Controls.Primitives"
     xmlns:telerikPagination="using:Telerik.UI.Xaml.Controls.Primitives.Pagination"
-    xmlns:viewModels="using:SherpaDesk.Models.ViewModels"
-    mc:Ignorable="d" Loaded="pageRoot_Loaded" Margin="0,-1,0,1">
+    mc:Ignorable="d" 
+    Margin="0,-1,0,1">
 
     <Page.Resources>
-        <viewModels:WorkListViewModel x:Key="Model" x:Name="Model" />
         <Style x:Key="WorkListPaging" TargetType="Grid" />
 
         <Style x:Key="WorkListHeaderTextStyle" TargetType="gridPrimitives:DataGridColumnHeader">
@@ -92,15 +92,12 @@
             </Setter>
         </Style>
     </Page.Resources>
-    <Page.DataContext>
-        <viewModels:WorkListPageViewModel/>
-    </Page.DataContext>
     <!--
         This grid acts as a root panel for the page that defines two rows:
         * Row 0 contains the back button and page title
         * Row 1 contains the rest of the page layout
     -->
-    <Grid x:Name="grid" Style="{StaticResource LayoutRootStyle}" Background="Transparent" RequestedTheme="Light" Margin="0,0,50,0">
+    <Grid x:Name="grid" Style="{StaticResource LayoutRootStyle}" Background="Transparent" RequestedTheme="Light" Margin="0,10,50,-10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="auto" />
@@ -194,8 +191,8 @@
                 </telerikPrimitives:RadCustomHubTile.FrontContent>
             </telerikPrimitives:RadCustomHubTile>
         </Grid>
-        <telerik:RadDataGrid x:Name="ItemsGrid" RequestedTheme="Light" 
-                             ItemsSource="{Binding Data, Source={StaticResource Model}, UpdateSourceTrigger=PropertyChanged}" 
+        <telerik:RadDataGrid x:Name="ItemsGrid" 
+                             RequestedTheme="Light" 
                              UserGroupMode="Disabled" 
                              AutoGenerateColumns="False" 
                              UserColumnReorderMode="None" 
@@ -210,13 +207,12 @@
                              GridLinesVisibility="Horizontal" 
                              GridLinesBrush="Transparent"
                              GridLinesThickness="19"
-                             Height="728"
-                             Margin="15,12,0,0"
+                             Margin="15,13,0,318"
                              IncrementalLoadingMode="Explicit"
                              Grid.Column="1" 
                              Grid.Row="0"
                              ScrollViewer.VerticalScrollMode="Auto" 
-                             SelectionChanged="ItemsGrid_SelectionChanged">
+                             SelectionChanged="ItemsGrid_SelectionChanged" Grid.RowSpan="2">
             <telerik:RadDataGrid.Resources>
                 <Style TargetType="gridPrimitives:DataGridHoverControl">
                     <Setter Property="Background" Value="Transparent"/>
@@ -298,7 +294,7 @@
                             </Grid>
                         </DataTemplate>
                     </telerik:DataGridTemplateColumn.CellContentTemplate>
-                </telerik:DataGridTemplateColumn>                
+                </telerik:DataGridTemplateColumn>
             </telerik:RadDataGrid.Columns>
         </telerik:RadDataGrid>
         <VisualStateManager.VisualStateGroups>
