Transfer UI fix

--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -472,13 +472,13 @@
                             <ColumnDefinition Width="80" />
                             <ColumnDefinition Width="auto" />
                         </Grid.ColumnDefinitions>
-                        <CheckBox Name="RemoveMeCheckBox" />
+                        <CheckBox Name="RemoveMeCheckBox" Checked="RemoveMeCheckBox_Checked" />
                         <TextBlock Text="Remove me after transfer" Margin="30,2,0,0" FontSize="20" Foreground="#8b8b8b" VerticalAlignment="Center" />
 
                         <CheckBox Grid.Row="1" Margin="0,20,0,0" />
                         <TextBlock Grid.Row="1" Text="Keep the current priority for this ticket" Margin="30,22,0,0" FontSize="20" Foreground="#8b8b8b" VerticalAlignment="Center" />
 
-                        <CheckBox Name="KeepMeCheckBox" Grid.Column="2" />
+                        <CheckBox Name="KeepMeCheckBox" Grid.Column="2" Checked="KeepMeCheckBox_Checked"  />
                         <TextBlock Grid.Column="2" Text="Keep me attached to this tickets" Margin="30,2,0,0" FontSize="20" Foreground="#8b8b8b" VerticalAlignment="Center" />
 
                         <CheckBox Grid.Column="2" Grid.Row="1" Margin="0,20,0,0" />
